--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono");
 
 :root {
+    --primary-bg-clr: #fff;
+    --secondary-bg-clr: #f4f5f6;
+
+    --tile-correct-clr: #538d4e;
+    --tile-wrong-clr: #3a3a3c;
+    --tile-wrongPlace-clr: #b59f3b;
+
+    --key-bg-clr: #d3d6da;
+
+    --fg-clr: #000;
+    --hover-fg-clr: #fff;
+
+    --tile-with-text-clr: #878a8c;
+
+    --tile-width: unset;
+
+    --alert-bg-clr: #00000095;
+    --alert-fg-clr: #fff;
+}
+
+* {
+    box-sizing: border-box;
+    user-select: none;
+}
+
+.dark-mode {
     --primary-bg-clr: #121213;
     --secondary-bg-clr: #3a3a3c;
 
@@ -15,15 +41,8 @@
 
     --tile-with-text-clr: #565758;
 
-    --tile-width: unset;
-
     --alert-fg-clr: #000;
     --alert-bg-clr: #ffffff95;
-}
-
-* {
-    box-sizing: border-box;
-    user-select: none;
 }
 
 html,
@@ -126,6 +145,11 @@ body {
     font-weight: 200;
 }
 
+.settings-button {
+    font-weight: 900;
+    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+}
+
 /* -> body container */
 
 .body-container {
@@ -184,7 +208,9 @@ body {
     animation: tile-pulse-in 50ms linear;
 }
 
-.tile-correct, .tile-wrongPlace, .tile-wrong {
+.tile-correct,
+.tile-wrongPlace,
+.tile-wrong {
     animation: tile-flip 500ms linear;
 }
 
@@ -202,9 +228,6 @@ body {
     background-color: var(--tile-wrong-clr);
     border-color: var(--tile-wrong-clr);
 }
-
-
-
 
 @keyframes tile-pulse-out {
     0% {
@@ -310,7 +333,6 @@ body {
 
 .alert {
     width: 20em;
-    max-width: 50vw;
     z-index: 2;
 
     background-color: var(--alert-bg-clr);
@@ -319,8 +341,162 @@ body {
 
     padding: 1em 2em;
     border-radius: 10px;
-    
+
     text-align: center;
     white-space: nowrap;
+
+}
+
+/* -> options container  */
+
+.settings-container {
+    display: none;
+
+    height: 100%;
+
+    position: relative;
+    top: 0;
+    left: 0;
+
+    justify-content: stretch;
+    align-items: stretch;
+    align-content: stretch;
+    flex-flow: column nowrap;
+    gap: 1em;
+
+    overflow-y: auto;
+}
+
+.settings-title {
+    color: var(--fg-clr);
+
+    font-size: 2em;
+    font-weight: 900;
+    text-align: center;
+}
+
+
+.setting-div {
+    margin: 0 7.5vw;
+    display: flex;
+
+    flex-flow: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+
+    border-bottom: 2px solid var(--secondary-bg-clr);
+    padding: 1em 1em;
     
+}
+
+.setting-description {
+    color: var(--fg-clr);
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+
+.setting-options {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+    gap: 1em;
+}
+
+.setting-options .material-symbols-outlined {
+    transform: scale(0.7);
+    font-variation-settings: 'FILL' 0, 'wght' 800, 'GRAD' 0, 'opsz' 48;
+    color: var(--fg-clr)
+}
+
+.setting-options .material-symbols-outlined[data-state='inactive'] {
+    transform: scale(0.7);
+    font-variation-settings: 'FILL' 0, 'wght' 800, 'GRAD' 0, 'opsz' 48;
+}
+
+.setting-options .option-value {
+    font-size: 1.2em;
+    color: var(--fg-clr)
+}
+
+.icon-selectable {
+    width: 2em;
+    cursor: pointer;
+}
+
+.icon-selectable[data-state="active"] {
+    animation: selected-icon 1.5s linear infinite;
+}
+
+.icon-selectable[data-state="inactive"] {
+    filter: grayscale(100%);
+    
+}
+
+
+@keyframes selected-icon {
+    0% {
+        transform: scale(1);
+    }
+    33% {
+        transform: scale(1.1);
+    }
+    66% {
+        transform: scale(0.9);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+
+/* -> toggle  */
+
+.toggle {
+    display: inline-block;
+
+    position: relative;
+    width: 30px;
+    height: 17px;
+
+    overflow: unset;
+}
+
+.original-input-checkbox {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.round-slider {
+    cursor: pointer;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--secondary-bg-clr);
+    transition: 0.4s;
+
+    border-radius: 17px;
+}
+
+.round-slider:before {
+    position: absolute;
+    content: '';
+    height: 12px;
+    width: 12px;
+    left: 3px;
+    bottom: 3px;
+    background-color: var(--fg-clr);
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+.original-input-checkbox:checked+.round-slider:before {
+    transform: translateX(12px);
 }
