--- a/styles/style.css
+++ b/styles/style.css
@@ -147,7 +147,7 @@ body {
 
 .settings-button {
     font-weight: 900;
-    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
 
 /* -> body container */
@@ -211,6 +211,7 @@ body {
 .tile-correct,
 .tile-wrongPlace,
 .tile-wrong {
+    color: #fff;
     animation: tile-flip 500ms linear;
 }
 
@@ -344,7 +345,6 @@ body {
 
     text-align: center;
     white-space: nowrap;
-
 }
 
 /* -> options container  */
@@ -375,7 +375,6 @@ body {
     text-align: center;
 }
 
-
 .setting-div {
     margin: 0 7.5vw;
     display: flex;
@@ -387,7 +386,6 @@ body {
 
     border-bottom: 2px solid var(--secondary-bg-clr);
     padding: 1em 1em;
-    
 }
 
 .setting-description {
@@ -407,18 +405,17 @@ body {
 
 .setting-options .material-symbols-outlined {
     transform: scale(0.7);
-    font-variation-settings: 'FILL' 0, 'wght' 800, 'GRAD' 0, 'opsz' 48;
-    color: var(--fg-clr)
+    font-variation-settings: "FILL" 0, "wght" 800, "GRAD" 0, "opsz" 48;
 }
 
-.setting-options .material-symbols-outlined[data-state='inactive'] {
+.setting-options .material-symbols-outlined[data-state="inactive"] {
     transform: scale(0.7);
-    font-variation-settings: 'FILL' 0, 'wght' 800, 'GRAD' 0, 'opsz' 48;
+    font-variation-settings: "FILL" 0, "wght" 800, "GRAD" 0, "opsz" 48;
 }
 
 .setting-options .option-value {
     font-size: 1.2em;
-    color: var(--fg-clr)
+    color: var(--fg-clr);
 }
 
 .icon-selectable {
@@ -432,26 +429,33 @@ body {
 
 .icon-selectable[data-state="inactive"] {
     filter: grayscale(100%);
-    
 }
-
 
 @keyframes selected-icon {
     0% {
         transform: scale(1);
     }
+
     33% {
         transform: scale(1.1);
     }
+
     66% {
         transform: scale(0.9);
     }
+
     100% {
         transform: scale(1);
     }
 }
 
+.settings-container .material-symbols-outlined {
+    color: var(--fg-clr);
+}
 
+.settings-container .material-symbols-outlined:hover {
+    cursor: pointer;
+}
 
 /* -> toggle  */
 
@@ -487,7 +491,7 @@ body {
 
 .round-slider:before {
     position: absolute;
-    content: '';
+    content: "";
     height: 12px;
     width: 12px;
     left: 3px;
@@ -499,4 +503,22 @@ body {
 
 .original-input-checkbox:checked+.round-slider:before {
     transform: translateX(12px);
+}
+
+/* -> scrollbar */
+
+::-webkit-scrollbar {
+    width: 1vw;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--primary-bg-clr);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--secondary-bg-clr);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--tile-with-text-clr);
 }
