--- a/styles/style.css
+++ b/styles/style.css
@@ -358,7 +358,7 @@ body {
     top: 0;
     left: 0;
 
-    justify-content: stretch;
+    justify-content: start;
     align-items: stretch;
     align-content: stretch;
     flex-flow: column nowrap;
